navbar logged out spacing fix

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -173,6 +173,10 @@ body {
   .container{
     /*max-width: 50vw;*/
   }
+  .logged-out{
+      display: inline-block;
+  }
+
 }
 
 
